Added Semantics - all code gen is working nicely now
